Fixed overflowing DataTable issue #148
* This issue only showed up after quitting and restarting the app
  due to sessionStorage of splitter position.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,6 +173,10 @@ div.node-content {
   width: 100%;
 }
 
+#root-div {
+  padding-left: 50px;
+}
+
 #tabbar  {
   height: 100%;
   padding-top: 10px;
@@ -180,7 +184,6 @@ div.node-content {
 
 #leftCol {
   height: 100%;
-  margin-left: 50px;
 }
 
 .btn-sidebar {
